gscrot (0.36~ppa1) gutsy; urgency=low

  * added functionalities to "session collection"
    --remove screenshots from session (but do not delete them)
		--reopen screenshot with specified program
  * new arrangement of settings area
  * new feature -- reduce color depth --
  * added dependency libimage-magick-perl

 -- Mario Kemper <mario.kemper@gmx.de>  Sa, 19 Apr 2008 02:07:19 +0200    

gscrot (0.35~ppa3) gutsy; urgency=low

  * added feature "session collection"
    --keep track of all screenshots during session
    --copy screeners to clipboard
    --print screenshots
    --delete screenshots
  * added command line args
    --min_at_startup - starts gscrot minimized to tray
    --beeper_off - turns audible feedback off
    --debug - prints a lot of debugging information to STDOUT
    --help - displays this help
  * start of localization using gettext
    --english is now default language
    --german translation added
  * fixed typo in info_message
  * changed hbox/vbox arrangement

 -- Mario Kemper <mario.kemper@gmx.de>  Do, 17 Apr 2008 13:17:37 +0200    

gscrot (0.34~ppa1) gutsy; urgency=low

  * new features 
  * added keybindings in menubar
  * added save and revert settings
  * reimplemented message dialogs
  * added support for grabbing window border when not using compiz or beryl
  * added debian folder to source directory
  * load settings automatically at startup
  * added statusbar to main window

 -- Mario Kemper <mario.kemper@gmx.de>  Do, 10 Apr 2008 21:00:10 +0200  

gscrot (0.33~ppa3) gutsy; urgency=low

  * added homepage to about box

 -- Mario Kemper <mario.kemper@gmx.de>  Mi, 09 Apr 2008 13:19:30 +0200 

gscrot (0.33~ppa2) gutsy; urgency=low

  * initial release

 -- Mario Kemper <mario.kemper@gmx.de>  Mi, 09 Apr 2008 12:50:28 +0200 
